# xrootd-file-cache

./: .gitignore  CMakeLists.txt
cmake/: FindXrootd.cmake
spec/: Makefile
src/: AllowDecision.cc  CMakeLists.txt  Cache.cc  Cache.hh  CacheFileInfo.cc  CacheFileInfo.hh  CacheStats.cc  CacheStats.hh  Context.cc  Context.hh  Decision.hh  Factory.cc  Factory.hh  File.cc  File.hh  IO.cc  IO.hh  Logger.cc  Logger.hh  PathsDecision.cc  Prefetch.cc  Prefetch.hh  XrdFileCacheFwd.hh
test/: dumpCinfo.cc  parseRec.pl  proxy-ucsd.cfg
test/xrdfragcp/: CMakeLists.txt  Makefile  xrdfragcp.cxx  xrdreadv.cxx
